Scala version 2.12.4