@@ -18,9 +18,8 @@ object Settings {
 
   lazy val defaultSettings = buildSettings ++ Seq(
     // compile options ScalaUnidoc, unidoc
-    scalacOptions ++= Seq("-target:jvm-1.8", "-encoding", "UTF-8", "-feature", "-deprecation", "-unchecked"),
-    javacOptions in Compile ++= Seq("-source", "1.8"),
-    javacOptions in(Compile, compile) ++= Seq("-add-modules","java.xml.bind","-source", "1.8", "-target", "1.8", "-Xlint:unchecked", "-Xlint:deprecation"),
+    scalacOptions ++= Seq("-encoding", "UTF-8", "-feature", "-deprecation", "-unchecked"),
+    javacOptions in(Compile, compile) ++= Seq("--add-modules","java.xml.bind","-source", "9", "-target", "9", "-Xlint:unchecked", "-Xlint:deprecation"),
     javaOptions in(Test, run) ++= Seq("-Djava.net.preferIPv4Stack=true") // For location service use
 
   )
